fix: Returned ReceiptResponse as return value; Temporary removed Request field from it
